# pca

./: .gitignore  README.md  appro_vars.txt  cupy_pca.py  main.ipynb  multi_test.txt  oja.py  test_cupy.ipynb  test_cupy.py  test_pca.ipynb
cpp/: CMakeLists.txt
cpp/include/core/: test.cu  test.h
cpp/include/utils/: matrix_dot.h
cpp/src/: history_pca.cpp  test.cpp
cuda/: prune  prune.cu
ipynb/: PCA.ipynb
pca/: PCA.py  generate_test.py  multitest.py  oja_vars.txt  pca_mdl2.py  read.ipynb  test.py
pca/cpp/: CMakeLists.txt
pca/cpp/include/core/: block_matrix.h  file_interact.h
pca/cpp/include/utils/: query.h
pca/cpp/src/: a.out  oja.cpp
pca/test/: pytest.ini
pca/utils/: utils.py
py/: DBPCA.py  Power_Iteration.py  appro_vars.txt  data.txt  generate_test.py  multi_test.txt  multitest.py  oja_hoang.py  oja_method.py  oja_vars.txt  pca_benchmark.py  pca_pm.py  test.py
test/: oja.py  test_core.py
utils/: csr_matrix.py
